--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/javascripts/ext4-all.js"></script>
 <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
 
-<%= form_for(@bulletin,:url=>{:controller =>"irm/bulletins", :action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@bulletin,:url=>{:controller =>"irm/bulletins", :action=>"create"},:builder => LabellingFormBuilder, :html => {:multipart => true}) do |f| %>
 <%= hidden_field_tag :return_url,@return_url %>
 <%= f.hidden_field :column_ids %>
 <div id="ep" class="bEditBlock bPageBlock">
@@ -147,6 +147,74 @@
     </div>
   </div>
 
+  <div class="pbBody">
+    <div class="pbSubheader first tertiaryPalette">
+      <h3><%= t(:label_irm_bulletin_attachment) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+          <tr>
+            <th width="20%"></th>
+            <th width="40px"></th>
+            <th><%= t :label_skm_file_name %></th>
+            <th><%= t :label_skm_file_category %></th>
+            <th><%= t :description%></th>
+          </tr>
+        </thead>
+        <tbody id="file_body">
+            <tbody id="exist_attachments_list">
+                <%= list_exist_attachments_during_create(@attachments)%>
+            </tbody>
+            <tr id="file_0">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_1">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(1);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[1][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[1][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_2">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(2);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[2][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[2][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_3">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(3);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[3][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[3][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_4">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(4);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[4][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[4][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
@@ -283,4 +351,46 @@ Ext.onReady(function() {
     });
 
 });
+</script>
+
+<script type="text/javascript">
+  function delete_subject(tar){
+    GY.use(function(Y){
+        Y.one("#tr_" + tar).remove();
+    })
+  }
+
+  function add_subject(tar){
+    GY.use(function(Y){
+        Y.one("#tr_");
+    })
+  }
+
+
+  var line_count = 5;
+
+  function save(){
+    document.file_form.action = "batch_create";
+    file_form.submit();
+  }
+ function delete_line(l)
+ {
+      GY.use(function(Y){
+          Y.one("#file_" + l).remove();
+      })
+  }
+  function generate_line()
+  {
+      GY.use(function(Y){
+          var node = Y.Node.create('<tr id="file_' + line_count + '">'
+                  + '<td class="dataCol"></td>'
+                  + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
+                  + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
+                  + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
+                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35"></td>'
+                  + '</tr>');
+          Y.one("#file_body").appendChild(node);
+      });
+      line_count ++;
+  }
 </script>
