--- a/app/views/uid/external_system_members/index.html.erb
+++ b/app/views/uid/external_system_members/index.html.erb
@@ -64,7 +64,7 @@
           <tbody>
             <tr>
               <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_uid_external_system_people) %></h2></td>
-              <td id="topButtonRow2" class="pbButton">
+              <td id="topButtonRow2" class="pbButton" style="width:30%">
                 <div class="button"><%= link_to t(:label_uid_external_system_add_people),{}, :href => "javascript:void(0)", :onclick=>"display_select_people()" %></div>
                 <%= form_for(@external_system_person,:url=>{:action=>"delete_people", :external_system_code => @external_system_code},:builder => LabellingFormBuilder) do |f| %>
                     <%= f.hidden_field(:temp_id_string, :value => "") %>
